<resources>
    <string name="app_name">بوابة الحلول الخبيرة</string>
    <string name="login_drawer">تسجيل دخول</string>
    <string name="email_address">البريد الإلكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="login">تسجيل الدخول</string>
    <string name="forgot_password">هل نسيت كلمة المرور؟</string>
    <string name="if_teacher">أهلا بك\nأذا كنت معلم فيمكنك الأن التواصل\nمع الطلاب عن بعد…</string>
    <string name="if_student">أذا كنت تلميذ فهاذا المكان\nالمناسب لك…</string>
    <string name="if_parent">أذا كنت ولي أمر فيمكنك الأن\nمراجعة تقييم أبنك\nو أنت في المنزل…</string>
    <string name="feedback_drawer">تواصل معنا</string>
    <string name="info_drawer">معلومات</string>
    <string name="logout_drawer">تسجيل خروج</string>
    <string name="edit_profile">تعديل</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="bottom_nav_text_home">الرئيسية</string>
    <string name="bottom_nav_text_profile">الملف الشخصي</string>
    <string name="bottom_nav_text_tools">الأدوات</string>
    <string name="bottom_nav_text_messages">الرسائل</string>
    <string name="bottom_nav_text_settings">الإعدادات</string>
    <string name="all">الكل</string>
    <string name="news">الأخبار</string>
    <string name="events">الفعليات</string>
    <string name="main_activity_title">أخر الأخبار و الفاعليات</string>
    <string name="skip">تخطي</string>
    <string name="search">البحث</string>
    <string name="notifications">الإشعارات</string>
    <string name="your_name">إسمك</string>
    <string name="your_message">رسالتك</string>
    <string name="send_message">أرسل الرسالة</string>
    <string name="read_more"><u>أقرأ المزيد></u></string>
    <string name="info_team">عن فريق العمل</string>
    <string name="info_about_app">عن التطبيق</string>
    <string name="messging_actionbar_title">الرسائل الواردة</string>
    <string name="message_sent">تم إرسال الرسالة</string>
    <string name="message_not_sent">حدث خطأ ما</string>
    <string name="invalid_username">تأكد من الإسم</string>
    <string name="invalid_email">تأكد من الايميل</string>
    <string name="invalid_content">تأكد من محتوي الرسالة</string>
    <string name="account_settings">اعدادات الحساب</string>
    <string name="name">الإسم</string>
    <string name="phone_number">رقم الجوال</string>
    <string name="change_password">تغيير كلمة المرور</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="display_settings">اعدادات العرض</string>
    <string name="language">اللغة</string>
    <string name="current_language">العربية</string>
    <string name="date_format">نوع التاريخ</string>
    <string name="primary_color">اللون الأساسي</string>
    <string name="accent_color">اللون الفرعي</string>
    <string name="font_size">حجم الخط</string>
    <string name="notifications_settings">اعدادات الإشعارات</string>
    <string name="notification_sound">صوت الإشعارات</string>
    <string name="vibration">الأهتزاز</string>
    <string name="do_not_disturb">ساعات الهدوء</string>
    <string name="settings">الأعدادات</string>
    <string-array name="languages">
        <item>العربية</item>
        <item>الإنجليزية</item>
    </string-array>
    <string name="tools_action_bar_title">الأدوات</string>
    <string name="classes_schedule">جدول الحصص</string>
    <string name="week_plan">الخطة الأسبوعية</string>
    <string name="students_evaluation">تقييم الطلاب</string>
    <string name="ask_your_teacher">اسأل معلمك</string>
    <string name="account_statement">كشف حساب</string>
    <string name="payment_receipt">سندات القبض</string>
    <string name="lessons_preparation">الدروس</string>
    <string name="revisions">المراجعات</string>
    <string name="homework">الواجب المنزلي</string>
    <string name="classes">الحصص</string>
    <string name="saturday">السبت</string>
    <string name="sunday">الأحد</string>
    <string name="monday">الإثنين</string>
    <string name="tuesday">الثلاثاء</string>
    <string name="wednesday">الأربعاء</string>
    <string name="thursday">الخميس</string>
    <string name="first_class">الأولي</string>
    <string name="second_class">الثانية</string>
    <string name="third_class">الثالثة</string>
    <string name="forth_class">الرابعة</string>
    <string name="fifth_class">الخامسة</string>
    <string name="sixth_class">السادسة</string>
    <string name="seventh_class">السابعة</string>
    <string name="days">الأيام</string>
    <string name="sons_title">الأبناء</string>
    <string name="logging_in">جاري تسجيل الدخول…</string>
    <string name="please_wait">برجاء الأنتظار…</string>
    <string name="semester">الفصل</string>
    <string name="subject">المادة الدراسية</string>
    <string name="skills">المهارات</string>
    <string name="lesson">الدرس</string>
    <string name="next">التالي</string>
    <string name="subject_revision">المادة الدراسية</string>
    <string name="revision_button">المراجعة</string>
    <string name="empty_revisions_textView">لا يوجد مراجعات</string>
    <string name="revision_without_title">مراجعة بدون عنوان</string>
    <string name="teacher_name_title">اسم المعلم</string>
    <string name="revision_title">اسم المراجعة</string>
    <string name="download_link_title">رابط التحميل</string>
    <string name="download_link_not_found">الرابط غير متاح</string>
    <string name="week_title">الاسبوع</string>
    <string name="semester_title">الفصل الدراسي</string>
    <string name="lessons_button">عرض الدرس</string>
    <string name="plan_button">الخطة</string>
    <string name="read">اقرأ المزيد</string>
    <string name="subject_name">أسم المادة</string>
    <string name="grad">الصف الدراسي</string>
    <string name="empty_ask_your_teacher_textView">لا يوجد أسئلة</string>
    <string name="stratigy">الأسترتيجية</string>
    <string name="aims">الأهداف</string>
    <string name="aids">الوسائل</string>
    <string name="intro">التمهيد</string>
    <string name="content">العرض</string>
    <string name="reviews">التقويم</string>
    <string name="train_home">الواجبات التحريرية</string>
    <string name="attachs">المرفقات</string>
    <string name="scripts">اسكريبتات</string>
    <string name="empty_notifications">لا يوجد إشعارات</string>
    <string name="invalid_login_string">خطأ في اسم المستخدم او كلمة المرور</string>
    <string name="title">العنوان</string>
    <string name="date">التاريخ</string>
    <string name="content_homework">المحتوى</string>
    <string name="no_homework">لايوجد واجبات</string>
    <string name="button_finish_text">الإنتهاء</string>
    <string name="participation_check_box_string">المشاركات</string>
    <string name="testDegHint">درجة الإختبار</string>
    <string name="homeworkDegHint">درجة الواجب</string>
    <string name="no_skill">لا يوجد مهارات</string>
    <string name="no_positive">لا يوجد إيجابيات</string>
    <string name="field_required">هذا الحقل مطلوب</string>
    <string name="pick_date">اختر التاريخ</string>
    <string name="eval_success">تم التقييم</string>
    <string name="date_required">التاريخ مطلوب</string>
    <string name="admin_login_exception">هذا الحساب لا يمتلك صلاحية للدخول إلي التطبيق</string>
    <string name="no_image_picked">لم يتم تحديد صورة</string>
    <string name="upload_image_dialog_message">جاري رفع الصورة…</string>
    <string name="empty_plan_view">لا يوجد بيانات</string>
    <string name="about_app" translatable="false">- البوابة اللإلكترونية للمدارس :\n* وهو نظام مرتبط بحسابات الطلاب, عند تسجيل ولي أمر جديد يتم إنشاء حساب له في البوابة آليا و تصله رسالة آليا ببيانات دخوله علي البوابة الإلكترونية.\n* نظام الصلاحيات و إنشاء المجموعات - نظام الحماية و اخذ الحماية و أخذ نسخة احتياطية. \n* نظام شؤون الطلاب - نظام شؤون المعلمين - نظام ادارة المحتوي.\n* نظام جداول الحصص و الاختبارات و خطة الاسبوع - الاختبارات الالكترونية - الواجبات - الدروس التعليمية - الاسئلة.\n* نظام الاختبارات الالكترونية ة إدارة المقررات الدراسية و يحتوي علي جميع أنواع الأسئلة(صح و خطأ - إختيار إجابة من متعدد - إختيار أكثر من إجابة من متعدد - التوصيل - أكمل - المتطابقة - السؤال المقالي) و يتم تصحيح الأسئلة إلكترونياََ و وصول تقارير للإدارة وولي الأمر و الطالب بالنتائج.\n* نظام إدارة الحصة إلكترونياََ حيث يتم تقييم طلاب الفصل في نهاية الحصة بسهولة خلال خمس دقائق و يستطيع ولي الأمر مشاهدة التقييم في نهاية الحصة مباشرة و بخيارات متعددة.\n* نظام التواصل الأداري بين الأدارة و المعلمين و أولياء الأمور و الطلاب لتجعل جميع معاملاتك إلكترونية.\n* نظام صلاحيات خاص بالتقييم مرتبط بالأقسام و العناصر و إطلاع كل مسؤول حسب صلاحيته علي تقارير الموظفين و يتم وصول التقارير بصورة آلية في حساب كل مدرس.\n* بيانات دخول لكل مدرس أو طالب أو ولي أمر و تواصل الكتروني بين الجميع.\n* منتدي لكل قسم خاص فقط للمستخدمين داخل الموقع.\n* موقع مستقل لكل قسم من أقسام المدرسة.\n* نظام رسائل الغياب و التأخير للطلاب و المدرسين مباشرة من داخل الموقع.\n* نظام حصص الانتظار و ربطها و إرسال رسائل للمعلمين بحصص الانتظار آلياََ.\n* رفع و تحديث بيانات الطلاب آلياََ من ملفات Exel.\n* تحضير الدروس إلكترونياََ و إرفاق وسائل شرح مختلفة من صور و إسكربتات يوتيوب و ملفات بحيث يمكن للطالب مراجعة شرح الدرس سواء أكان متغيباََ أو في نهاية اليوم للمراجعة.</string>
    <string name="about_team" translatable="false">- من نحن : \n* الحلول الخبيرة تقدم لكم خبرة أكثر من عشرين عاماََ في مجال البرمجة و تحليل النظم و تصميم المواقع و الشبكات و الإستضافة, نقدم جميع هذه الخدمات بمختلف أشكالها التي تطلبها منشأتكم باحترافية عالية.\n- الرؤية : \n* الريادة في مجال تقديم حلول تقنية المعلومات علي المستوي العربي و العالمي من خلال خبرائنا و تقنياتنا الحديثة. \n- الرسالة : \n* تحليل الأنظمة في جميع المؤسسات و تحويلها إلي أنظمة حاسوبية ممزوجة بالخبرة العلمية و العملية\n- الأهداف : \n* أن نكون لبنة تساهم في تطوير جميع المؤسسات في ربوع بلادنا الحبيبة.\n* الاستمرار بالتطوير و استخدام أحدث التقنيات العاملية. \n* التركيز علي توفير ما يحتاجه صانعوا القرار .\n* رفع مستوي الخدمات المقدمة للمستخدمين و دعمهم لإدارة أعمالهم .\n* نقل و توطين التقنية. \n* مساعدة شركئنا في الوصول لأهدافهم بكفاءة عالية و توفير أوقاتهم و جهودهم.</string>
    <string name="add_lesson">إضافة</string>
    <string name="view_lesson">عرض</string>
    <string name="homework_hint">الواجبات المدرسية</string>
    <string name="eval_e_preparation">التقويم</string>
    <string name="warm_up">التمهيد</string>
    <string name="methods">الوسائل</string>
    <string name="goals">الاهداف</string>
    <string name="strategy">الإستراتيجية</string>
    <string name="subject_title">عنوان الدرس</string>
    <string name="no_subject">لا يوجد مواد دراسية</string>
    <string name="attachment">المرفقات</string>
    <string name="no_file_selected">لم يتم اختيار ملف</string>
    <string name="lesson_title_required">عنوان الدرس مطلوب</string>
    <string name="lesson_strategy_required">إستراتجية الدرس مطلوبة</string>
    <string name="lesson_goals_required">أهداف الدرس مطلوبة</string>
    <string name="lesson_means_required">وسائل الدرس مطلوب</string>
    <string name="lesson_preface_required">تمهيد الدرس مطلوبة</string>
    <string name="lesson_evaluation_required">تقييم الدرس مطلوب</string>
    <string name="lesson_homework_required">واجبات الدرس مطلوبة</string>
    <string name="lesson_date_required">التاريخ مطلوب</string>
    <string name="uploading_lesson">جاري رفع الدرس…</string>
    <string name="eighth_class">الثامنة</string>
    <string name="chat_is_still_in_development">"الرسائل لا تزال قيد التطوير "</string>
    <string name="empty_reset_string">لا يوجد سندات</string>
    <string name="receipt_id_string">رقم السند</string>
    <string name="payment_method">طريقة الدفع</string>
    <string name="number">الرقم المرجعى</string>
    <string name="amount">القيمة</string>
    <string name="year">السنة الدراسية</string>
    <string name="empty_account_balance">لا يوجد كشف حساب</string>
    <string name="row_level">الصف</string>
    <string name="previous_balance">الرصيد السابق</string>
    <string name="total_benefits">إجمالي\nالإستحقاقات</string>
    <string name="send_code">إرسال الكود</string>
    <string name="re_enter_code"><u>إعادة إدخال الكود</u></string>
</resources>