<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/ic_bottom_home"
        android:title="@string/bottom_nav_text_home" />
   <!-- <item
        android:id="@+id/bottom_nav_notifications"
        android:icon="@drawable/ic_notification"
        android:title="@string/notifications" />-->
    <item
        android:id="@+id/bottom_nav_tools"
        android:icon="@drawable/ic_bottom_tools"
        android:title="@string/bottom_nav_text_tools" />

    <item
        android:id="@+id/bottom_nav_messages"
        android:icon="@drawable/ic_bottom_messages"
        android:title="@string/bottom_nav_text_messages" />

    <item
        android:id="@+id/bottom_nav_settings"
        android:icon="@drawable/ic_bottom_settings_bigger"
        android:title="@string/bottom_nav_text_settings" />
</menu>