<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.softray_solutions.newschoolproject.ui.fragments.addLessonPreparation.AddLessonPreparation">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/subject_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/monadi"
                android:text="@string/subject_revision"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toTopOf="@+id/subject_spinner_add_preparation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/subject_spinner_add_preparation"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/spinner_background"
                android:elevation="2dp"
                android:paddingEnd="20dp"
                android:spinnerMode="dropdown"
                app:elevation="2dp"
                app:layout_constraintBottom_toTopOf="@+id/skills_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subject_TV" />

            <TextView
                android:id="@+id/skills_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/monadi"
                android:text="@string/skills"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toTopOf="@+id/skills_spinner_add_preparation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subject_spinner_add_preparation" />

            <Spinner
                android:id="@+id/skills_spinner_add_preparation"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/spinner_background"
                android:elevation="2dp"
                android:paddingEnd="30dp"
                android:spinnerMode="dropdown"
                app:elevation="2dp"
                app:layout_constraintBottom_toTopOf="@+id/title_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/skills_tv" />

            <EditText
                android:id="@+id/title_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="@string/subject_title"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toTopOf="@+id/strategy_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/skills_spinner_add_preparation" />

            <EditText
                android:id="@+id/strategy_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="@string/strategy"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toTopOf="@+id/goals_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_edit" />

            <EditText
                android:id="@+id/goals_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="@string/goals"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toTopOf="@+id/means_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/strategy_edit" />

            <EditText
                android:id="@+id/means_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="@string/methods"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toTopOf="@+id/preface_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/goals_edit" />

            <EditText
                android:id="@+id/preface_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="@string/warm_up"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toTopOf="@+id/eval_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/means_edit" />

            <EditText
                android:id="@+id/eval_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="@string/eval_e_preparation"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toTopOf="@+id/homeworks_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/preface_edit" />

            <EditText
                android:id="@+id/homeworks_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="@string/homework_hint"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toTopOf="@+id/date_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eval_edit" />

            <Button
                android:id="@+id/date_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/drawer_button_shape"
                android:fontFamily="@font/monadi"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/pick_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/attachment_selector"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/homeworks_edit" />

            <Button
                android:id="@+id/attachment_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/drawer_button_shape"
                android:fontFamily="@font/monadi"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/attachment"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_selector" />

            <TextView
                android:id="@+id/date_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="85dp"
                android:layout_marginEnd="24dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toBottomOf="@+id/date_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/date_selector"
                app:layout_constraintTop_toTopOf="@+id/date_selector" />

            <TextView
                android:id="@+id/attachment_preview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:text="@string/no_file_selected"
                android:textAlignment="viewEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/attachment_selector"
                app:layout_constraintTop_toTopOf="@+id/attachment_selector" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/next_button"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/button_finish_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>