<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.forgetPassword.ForgetPasswordFragment">


    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@null"
        android:src="@drawable/esol_logo_icon_with_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/userName_ET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/some_color"
        android:fontFamily="@font/cairo_regular"
        android:hint="@string/user_name"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="@color/some_color"
        app:layout_constraintBottom_toTopOf="@+id/emailAddress_ET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_logo"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/emailAddress_ET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/some_color"
        android:fontFamily="@font/cairo_regular"
        android:hint="@string/email_address"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="@color/some_color"
        app:layout_constraintBottom_toTopOf="@+id/phone_ET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName_ET"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/phone_ET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/some_color"
        android:fontFamily="@font/cairo_regular"
        android:hint="@string/phone_number"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="@color/some_color"
        app:layout_constraintBottom_toTopOf="@+id/send_code_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress_ET"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/send_code_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/login_button_bk"
        android:fontFamily="@font/cairo_regular"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/send_code"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_ET" />

</androidx.constraintlayout.widget.ConstraintLayout>